# orerry

./: .gitattributes  .gitignore  DESIGN.md  DESIGN_SPEC.md  PRODUCT.md  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: Cargo.toml  README.md  package.json
apps/backend/crates/aurora/: Cargo.toml
apps/backend/crates/aurora/src/: lib.rs
apps/backend/crates/comet/: Cargo.toml
apps/backend/crates/comet/src/: lib.rs
apps/backend/crates/ephemeris/: Cargo.toml
apps/backend/crates/ephemeris/src/: lib.rs
apps/backend/crates/horizon/: Cargo.toml
apps/backend/crates/horizon/src/: main.rs
apps/backend/crates/meridian/: Cargo.toml
apps/backend/crates/meridian/src/: lib.rs
apps/backend/crates/sextant/: Cargo.toml
apps/backend/crates/sextant/src/: lib.rs
apps/backend/crates/shared/: Cargo.toml
apps/backend/crates/shared/src/: error.rs  health.rs  lib.rs
apps/backend/crates/transit/: Cargo.toml
apps/backend/crates/transit/src/: lib.rs
apps/launcher/: README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/launcher/src/: App.svelte  app.css  main.ts
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: lib.rs  main.rs
apps/launcher/src-tauri/src/auth/: mod.rs
apps/launcher/src-tauri/src/game/: mod.rs
apps/launcher/src-tauri/src/ipc/: mod.rs
apps/launcher/src-tauri/src/profiles/: mod.rs
apps/launcher/src-tauri/src/updater/: mod.rs
apps/launcher/src/lib/: Shell.svelte  queryClient.ts  tauri.ts  window.ts
apps/launcher/src/lib/components/: Avatar.svelte  Badge.svelte  Button.svelte  EmptyState.svelte  HeroPanel.svelte  NavItem.svelte  NewsItem.svelte  NewsRail.svelte  OrbitalMotif.svelte  OrreryRings.svelte  ProfileChip.svelte  RarityChip.svelte  SectionLabel.svelte  Sidebar.svelte  Spinner.svelte  StatusBar.svelte  StatusDot.svelte  WindowChrome.svelte
apps/launcher/src/lib/data/: news.ts  session.svelte.ts  status.svelte.ts
apps/launcher/src/routes/: Home.svelte
apps/mod/: README.md  build.gradle.kts  gradle.properties  package-lock.json  package.json  settings.gradle.kts
apps/mod/run/: options.txt
apps/mod/run/config/fabric/: indigo-renderer.properties
apps/mod/src/main/java/gg/orrery/mixin/: MinecraftClientMixin.java  MinecraftMixin.java
apps/mod/src/main/kotlin/gg/orrery/: OrreryMod.kt
apps/mod/src/main/kotlin/gg/orrery/atlas/: Atlas.kt  AtlasAdapter.kt  EntryType.kt  MenuEntry.kt  MenuRecognizer.kt  MenuRegistry.kt  Models.kt  Rarity.kt  TextCodes.kt
apps/mod/src/main/kotlin/gg/orrery/codex/: Codex.kt
apps/mod/src/main/kotlin/gg/orrery/dev/: DevPreview.kt
apps/mod/src/main/kotlin/gg/orrery/eclipse/: Eclipse.kt  EclipseViews.kt  Interaction.kt
apps/mod/src/main/resources/: fabric.mod.json  orrery.mixins.json
tooling/decisions/: 0001-frontend-stack-and-token-pipeline.md  0002-phase0-app-skeletons.md  0003-eclipse-spine-architecture.md  0004-phase1-text-rendering.md  0005-phase2-semantic-menus-and-fonts.md
tooling/scripts/: gen-tokens-kotlin.ts
(+19 files in other folders)
