[workspace]
members = [
    "crates/horizon",
    "crates/meridian",
    "crates/ephemeris",
    "crates/sextant",
    "crates/aurora",
    "crates/comet",
    "crates/transit",
    "crates/shared",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }

# HTTP utilities
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
shared = { path = "crates/shared" }
