[package]
name = "observatory"
version = "0.1.0"
description = "Observatory — the Orrery launcher (Tauri 2 Rust core)"
authors = ["Orrery contributors"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# Tauri 2 convention: lib + bin in one crate.
# The library exposes commands so they can be integration-tested independently.
# Lib name differs from the bin (Tauri 2 convention) to avoid an output-filename
# collision between the lib and bin targets (.pdb/.dll).
[lib]
name = "observatory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "observatory"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # Smaller binary; unwind not needed in a Tauri shell
codegen-units = 1 # Full LTO optimization
