[package]
name = "horizon"
version = "0.1.0"
edition = "2021"
description = "Orrery backend — API gateway / edge service"

[[bin]]
name = "horizon"
path = "src/main.rs"

[dependencies]
shared.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

# Service crates — horizon mounts all service routers
meridian = { path = "../meridian" }
ephemeris = { path = "../ephemeris" }
sextant   = { path = "../sextant" }
aurora    = { path = "../aurora" }
comet     = { path = "../comet" }
transit   = { path = "../transit" }

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
http-body-util.workspace = true
