[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Orrery backend — shared types, errors, and prelude"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
